// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component renders correctly with default props 1`] = `
<div
  class="
    relative flex w-full rounded-[10px] border border-grey100-mode1 
    bg-grey400-mode1 transition-colors
    pointer-events-auto
    focus-within:border-primary400-mode1
  "
>
  <textarea
    class="
    w-full resize-none bg-transparent font-inter outline-none border-none
    text-white-mode1 placeholder-grey100-mode1 h-[233px] px-[10px] py-[8px] text-[16px] font-bold
    
  "
    placeholder="Enter text"
  />
</div>
`;

exports[`TextArea Component renders correctly with report variant 1`] = `
<div
  class="
    relative flex w-full rounded-[10px] border border-grey100-mode1 
    bg-grey400-mode1 transition-colors
    pointer-events-auto
    focus-within:border-primary400-mode1
  "
>
  <textarea
    class="
    w-full resize-none bg-transparent font-inter outline-none border-none
    text-white-mode1 placeholder-grey300-mode1 h-[70px] px-[12px] py-[11px] text-[12px] font-semibold
    
  "
    placeholder="Enter text"
  />
</div>
`;
